update : Add dynamic compilation tools